--- a/css/about.css
+++ b/css/about.css
@@ -18,7 +18,6 @@
      margin: 0 0 16px 0;
      padding: 0 0 16px 0;
      font-size: 32px;
-     font-weight: bold;
      letter-spacing: -2px;
      border-bottom: 1px solid #999;
  }
@@ -34,9 +33,8 @@
      bottom: 0;
      right: 0;
      font-style: italic;
-     font-family: Georgia, Serif;
-     font-size: 16px;
-     color: #999;
+     font-size: 26px;
+     color: #e6622b;;
      font-weight: normal;
  }
 
@@ -65,7 +63,6 @@
  }
 
  #objective p {
-     font-family: Georgia, Serif;
      font-style: italic;
      color: #666;
  }
@@ -80,6 +77,7 @@
      float: left;
      height: 100px;
      border-right: 1px solid #999;
+     
  }
 
  dd {
